# id

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  clients.json  drizzle.config.ts  dump.sql  next.config.mjs  package.json  pnpm-lock.yaml  rust-analyzer.toml  shell.nix  svelte.config.js  tailwind.config.ts  tsconfig.json
.next/: build-manifest.json  trace
.next/cache/webpack/client-development/: 1.pack  2.pack  3.pack  4.pack  5.pack  index.pack  index.pack.gz.old  index.pack.old
.next/cache/webpack/server-development/: 0.pack  1.pack  2.pack  4.pack  index.pack  index.pack.gz.old  index.pack.old
.next/server/: _error.js  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  pages-manifest.json
.next/server/pages/: _app.js  _document.js  _error.js  authorize.js
.next/server/vendor-chunks/: @swc+helpers@0.5.2.js  next@14.1.0_react-dom@18.2.0_react@18.2.0.js
.next/static/chunks/: _error.js  webpack.js
.next/static/chunks/pages/: _app.js  authorize.js
.next/static/development/: _buildManifest.js
.next/static/webpack/: 311ce8506b5bb61e.webpack.hot-update.json  8c255a869b48a510.webpack.hot-update.json  webpack.19a2702c8a3c01db.hot-update.js  webpack.311ce8506b5bb61e.hot-update.js  webpack.75f3c645eb5a9903.hot-update.js  webpack.853f1ed9a77320d4.hot-update.js  webpack.8c255a869b48a510.hot-update.js  webpack.d8d6cf22f0a4d6f9.hot-update.js
.next/static/webpack/pages/: _app.75f3c645eb5a9903.hot-update.js  authorize.8c255a869b48a510.hot-update.js  authorize.d8d6cf22f0a4d6f9.hot-update.js
api/: authorize.rs  client.rs  door.rs  jwks.rs  new.rs  passport.rs  scan.rs  token.rs  user.rs
api/passport/: [id].rs
drizzle/: 0000_romantic_thunderball.sql  relations.ts  schema.ts
drizzle/meta/: 0000_snapshot.json  _journal.json
entity/: Cargo.toml
entity/src/entities/: auth_grant.rs  auth_session.rs  auth_token.rs  ceremonies.rs  mod.rs  oauth_client.rs  passport.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
migration/: Cargo.toml
migration/entity/src/entities/: auth_grant.rs  auth_session.rs  auth_token.rs  ceremonies.rs  passport.rs  prelude.rs  sea_orm_active_enums.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240205_172651_add_secret.rs  m20240205_193350_drop_sequence.rs  m20240206_145604_add_totp.rs  m20240210_064839_oauth_tables.rs  m20240304_164539_nullable_grant_code.rs  m20240907_031824_passport_ceremony_date.rs  m20240917_210754_ceremonies.rs  m20240920_155703_auth_session.rs  m20240924_225432_passport_ceremony_fk.rs  m20260119_000000_oauth_client.rs  m20260303_194119_redirect_uris_json.rs
migrations/: 001_initial_db.sql
pages/: _app.tsx  authorize.tsx  index.tsx  scan.tsx  users.tsx
prisma/: schema.prisma
scripts/: migrate-pg-to-turso.ts  rotate-totp.ts
src/: app.css  app.d.ts  app.html  app.rs  hooks.server.ts  jwt.rs  lib.rs  main.rs  oauth.rs  tfa.rs
src/lib/server/db/: index.ts  schema.ts
src/lib/server/effect/: errors.ts  layers.ts  runtime.ts
src/lib/server/elysia/: index.ts
src/lib/server/elysia/middleware/: oauth.ts
src/lib/server/elysia/routes/: authorize.ts  door.ts  jwks.ts  new.ts  passport.ts  passportId.ts  scan.ts  token.ts  user.ts
src/lib/server/jwt/: index.ts
src/lib/server/kv/: index.ts
src/lib/server/services/: AdminPassportService.ts  ClientService.ts  NewPassportService.ts  OAuthAuthorizer.ts  OAuthIssuer.ts  OAuthRegistrar.ts  PassportService.ts  SessionService.ts  TotpService.ts  UserService.ts
src/lib/server/shared/: clients.ts  random.ts  scopes.ts
src/lib/shared/: types.ts
src/pages/: authorize.rs  dash.rs  logout.rs  mod.rs  scan.rs
src/routes/: +layout.svelte  +page.svelte  authorize.rs  client.rs  door.rs  mod.rs  new.rs  passport.rs  passport_id.rs  scan.rs  token.rs  user.rs
src/routes/authorize/: +page.server.ts  +page.svelte
src/routes/authorize/api/: +server.ts
src/routes/dash/: +page.server.ts  +page.svelte
src/routes/logout/: +page.server.ts  +page.svelte
src/routes/scan/: +page.server.ts  +page.svelte
style/: tailwind.css
styles/: globals.css
~/: .zsh_history
